// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsItem boolean type should match snapshot 1`] = `
<div
  className="css-eawcpc"
>
  <div
    className="css-aoco0s"
  />
  <div
    className="css-vysije"
  >
    <h4
      className="css-bog7t0"
    >
      foo
    </h4>
    <p
      className="css-1shpbgb"
    >
      bar
    </p>
  </div>
  <div
    className="css-naf6nl"
  >
    <div
      className="css-1j6ivwb"
      onClick={[Function]}
    >
      <div
        className="css-fc7zzi"
      />
    </div>
  </div>
</div>
`;

exports[`SettingsItem button type should match snapshot 1`] = `
<div
  className="css-eawcpc"
>
  <div
    className="css-aoco0s"
  />
  <div
    className="css-vysije"
  >
    <h4
      className="css-bog7t0"
    >
      foo
    </h4>
    <p
      className="css-1shpbgb"
    >
      bar
    </p>
  </div>
  <div
    className="css-19d2vsr"
  >
    <button
      className="css-z7ovzb"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      baz
    </button>
  </div>
</div>
`;

exports[`SettingsItem should match snapshot 1`] = `
<div
  className="css-eawcpc"
>
  <div
    className="css-aoco0s"
  />
  <div
    className="css-vysije"
  >
    <h4
      className="css-bog7t0"
    >
      foo
    </h4>
    <p
      className="css-1shpbgb"
    >
      bar
    </p>
  </div>
  <div
    className="css-naf6nl"
  >
    <div
      className="css-1j6ivwb"
      onClick={[Function]}
    >
      <div
        className="css-1a07xhr"
      />
    </div>
  </div>
</div>
`;
